--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Controle de Estoque Aquagas</title>
+  <title>Controle de Estoque AquaGas</title>
   <style>
     * {
       margin: 0;
@@ -491,7 +491,7 @@
   <header class="app-header">
     <div class="logo-area">
       <img src="logo.png" alt="Logo Aquagas" />
-      <span style="font-size: 1.3rem; color: #fff; font-weight: bold;">Aquagas Controle</span>
+      <span style="font-size: 1.3rem; color: #fff; font-weight: bold;">AquaGás Controle</span>
     </div>
     <div class="header-actions">
       <button class="admin-btn">Painel Admin</button>
