--- a/dashboard.html
+++ b/dashboard.html
@@ -490,7 +490,7 @@
 <body>
   <header class="app-header">
     <div class="logo-area">
-      <img src="logo.png" alt="Logo Aquagas" />
+      <img src="logo.png" alt="Logo_Aquagas" />
       <span style="font-size: 1.3rem; color: #fff; font-weight: bold;">AquaGás Controle</span>
     </div>
     <div class="header-actions">
