--- a/dashboard.html
+++ b/dashboard.html
@@ -490,6 +490,7 @@
 <body>
   <header class="app-header">
     <div class="logo-area">
+      <img src="logo.png" alt="Logo Aquagas" />
       <img src="logo.png" alt="Logo_Aquagas" />
       <span style="font-size: 1.3rem; color: #fff; font-weight: bold;">AquaGás Controle</span>
     </div>
@@ -503,6 +504,7 @@
       <button id="btn-stock" class="active" onclick="showSection('stock'); setActiveButton('btn-stock')">💧 Estoque</button>
       <button id="btn-summary" onclick="showSection('summary'); setActiveButton('btn-summary')">📊 Resumo</button>
       <button id="btn-delivery" onclick="showSection('delivery'); setActiveButton('btn-delivery')">🚚 Entregas</button>
+      <button id="btn-user" onclick="showSection('user'); setActiveButton('btn-user')">👤 Usuários</button>
     </nav>
     <div class="container">
       <div id="stockSection">
