--- a/dashboard.html
+++ b/dashboard.html
@@ -490,13 +490,12 @@
 <body>
   <header class="app-header">
     <div class="logo-area">
-      <img src="logo.png" alt="Logo Aquagas" />
-      <img src="logo.png" alt="Logo_Aquagas" />
-      <span style="font-size: 1.3rem; color: #fff; font-weight: bold;">AquaGás Controle</span>
+      <img src="logo_Aquagas.png" alt="Logo Aquagas" />
+      <span style="font-size: 1.3rem; color: #fff; font-weight: bold;">Controle de Estoque</span>
     </div>
     <div class="header-actions">
       <button class="admin-btn">Painel Admin</button>
-      <button class="logout-btn">Sair 🔒</button>
+      <button class="logout-btn" onclick="window.location.href='index.html'">Sair 🔒</button>
     </div>
   </header>
   <div style="display: flex;">
