--- a/dashboard.html
+++ b/dashboard.html
@@ -510,10 +510,7 @@
           <div class="card">
             <div class="card-header water-header">
               <span>💧 Estoque de Água</span>
-              <span id="exclamacao-agua">❗</span>
-              </div>
-              <ul id="lista-agua">
-              </ul>
+              <span>❗</span>
             </div>
             <div class="card-content">
               <div class="stock-info">
@@ -537,10 +534,7 @@
           <div class="card">
             <div class="card-header gas-header">
               <span>🔥 Estoque de Gás</span>
-              <span id="exclamacao-gas">❗</span>
-              </div>
-              <ul id="lista-gas">
-              </ul>
+              <span>❗</span>
             </div>
             <div class="card-content">
               <div class="stock-info">
@@ -944,21 +938,6 @@
     }
     updateStockDisplay();
     renderDeliveries();
-function atualizarExclamacaoEstoque(idLista, idExclamacao) {
-  const lista = document.getElementById(idLista);
-  const exclamacao = document.getElementById(idExclamacao);
-
-  if (lista && exclamacao) {
-    const itens = lista.getElementsByTagName('li');
-    if (itens.length >= 40) {
-      exclamacao.style.display = 'none';
-    } else {
-      exclamacao.style.display = 'inline';
-    }
-  }
-}
-atualizarExclamacaoEstoque('lista-agua', 'exclamacao-agua');
-atualizarExclamacaoEstoque('lista-gas', 'exclamacao-gas');
   </script>
 </body>
 </html>
